adjusted amenities section heights and fixed some spacing

--- a/assets/css/zz_master.styl
+++ b/assets/css/zz_master.styl
@@ -1016,7 +1016,7 @@ section.amenities
 	#big-logo
 		max-width 75%
 	section.amenities
-		height 1650px
+		height 1950px
 		.top-row-amenities
 			height 500px
 			.artists
@@ -1123,7 +1123,14 @@ section.amenities
 		background-size cover
 		height 30%
 
+@media (min-width: 375px)
+	section.amenities
+		height 2000px
+
 @media (min-width: 425px)
+	section.amenities
+		height 2050px
+
 	.platinum, .gold, .general
 		&>.col-md-6>h1
 			padding-top 10%
@@ -1150,11 +1157,23 @@ section.amenities
 	.vip-tickets
 		margin-right 5%
 
+@media (min-width: 500px)
+	section.amenities
+		height 2100px
+
+@media (min-width: 550px)
+	section.amenities
+		height 2200px
+
+@media (min-width: 650px)
+	section.amenities
+		height 2300px
+
 @media (min-width: 768px)
 	#big-logo
 		max-width 45%
 	section.amenities
-		height 620px
+		height 1300px
 		.top-row-amenities
 			height 350px
 			.artists
@@ -1237,11 +1256,19 @@ section.amenities
 	.general-admission-img
 		background-color red
 		height 65%
+
+@media (min-width: 990px)
+	section.amenities
+		height 1400px
+
+@media (min-width: 992px)
+	section.amenities
+		height 1500px
 	
 
 @media (min-width: 1024px)
 	section.amenities
-		height 800px
+		height 1650px
 		.top-row-amenities
 			height 450px
 		.bottom-row-amenities
@@ -1273,6 +1300,47 @@ section.amenities
 		&>iframe
 			width 70vw
 			height 70vh
+
+@media (min-width: 1200px)
+	section.amenities
+		height 1800px
+
+@media (min-width: 1440px)
+	section.amenities
+		height 1800px
+
+@media (min-width: 1700px)
+	.social-block
+		padding-left 20%
+	
+	.grizzlyfest-block
+		padding-right 20%
+
+@media (min-width: 2000px)
+	.ga-tickets
+		margin-left 25%
+
+	.vip-tickets
+		margin-right 25%
+
+	.social-block
+		padding-left 25%
+	
+	.grizzlyfest-block
+		padding-right 25%
+
+@media (min-width: 2300px)
+	.ga-tickets
+		margin-left 30%
+
+	.vip-tickets
+		margin-right 30%
+
+	.social-block
+		padding-left 30%
+	
+	.grizzlyfest-block
+		padding-right 30%
 
 //=================================================================//
 .overlay
